REVIEW: Footer - alignment and style issues resolved

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -65,7 +65,8 @@
 }
 
 .footer-social {
-  height: 34px;
+  /* line-height: 24px; */
+  font-size: 26px;
 }
 
 .footer-wrap a {
